--- a/app/src/main/res/layout/activity_send_tweet.xml
+++ b/app/src/main/res/layout/activity_send_tweet.xml
@@ -52,7 +52,7 @@
     <ListView
         android:id="@+id/viewTweetsListView"
         android:layout_width="395dp"
-        android:layout_height="441dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
